# pico-artillery-calculator

./: .gitignore  CMakeLists.txt  README.md  main.c
ballistics/: atmosphere.c  atmosphere.h  drag.c  drag.h  gun_data.c  gun_data.h  integrator.c  integrator.h  solver.c  solver.h
core1/: core1_task.c  core1_task.h
test/: CMakeLists.txt  simtest.c
ui/: lcd1602_i2c.c  menu.c  menu.h  pico_keypad4x4.c
